tests/expectations/compiler/definition/define_multiple_variables_fail.out
Error [ETYC0372072]: Expected a tuple with 2 elements, found one with 3 elements
    --> compiler-test:5:5
     |
   5 |     let (a,b,c): (u8,u8) = (2u8,3u8);
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372072]: Expected a tuple with 3 elements, found one with 2 elements
    --> compiler-test:6:5
     |
   6 |     let (d,e): (u8,u8,u8) = (1u8,2u8,3u8);
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372117]: Expected type `(u8, u8, u8)` but type `u8` was found.
    --> compiler-test:7:32
     |
   7 |     let (g,h,i): (u8,u8,u8) = (1u8);
     |                                ^^^
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:2:9
     |
   2 | program test.aleo { }
     |         ^^^^^^^^^
